--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:500,900,400);
+@import url(//fonts.googleapis.com/css?family=Roboto:500,900,400);
 
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
